-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4
-
None
-
a17fc85b51a6bdcfa33dcff183d2b7efd667fb92 2a3d690a195607ee640d84aac762153c8096bf5b
In qurl.cpp::fromUserInput around line 6558, it checks urlPrepended.port() to be -1. However when urlPrepended is not valid, its port number can be any invalid port number. Ex. QUrl::fromUserInput() returns empty QUrl object for tel:2147483648
| For Gerrit Dashboard: QTBUG-28985 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 44163,2 | Limit the range of the QUrlPrivate::port to -1 to 65535 | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
| 45965,1 | Forward-port tests on invalid port numbers from Qt 4 | stable | qt/qtbase | Status: MERGED | +2 | 0 |